# imu_demo

./: .clang-format  .gitignore  CMakeLists.txt  DEV_NOTES.md  README.md  package.xml
config/: bmi088.yaml
docs/plans/: drdy_interrupt.md  gyro_calibration_sink.md  sensor_init.md
include/imu_demo/: bmi088_driver.hpp  bmi088_iio_reader.hpp  bmi088_node.hpp  bmi088_registers.hpp  bus_interface.hpp  iic_bus.hpp  imu_node.hpp  imu_preprocess_node.hpp  spi_bus.hpp
launch/: imu.launch.py
scripts/: analyze_static.py
src/: bmi088_driver.cpp  bmi088_iio_reader.cpp  bmi088_node.cpp  imu_node.cpp  imu_preprocess_node.cpp  spi_bus.cpp
